# huffman_archiver

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: encoding.h  huffman_tree.h
samples/: frequency_table_test.txt
src/: encoding.cpp  huffman_tree.cpp  main.cpp
test/: test.cpp
